fixes post-popup issues that were broken on rebase conflicts
Summary:
fixes post-popup bugs that occured on last rebase

Fixes T1439

Test Plan: check map pop-ups on "/Modules" and "/Blocks"

Reviewers: sophshep

Reviewed By: sophshep

Maniphest Tasks: T1439

Differential Revision: https://phabricator.ushahidi.com/D735

--- a/assets/css/rtl-style.css
+++ b/assets/css/rtl-style.css
@@ -275,6 +275,10 @@ div#map.map.leaflet-container {
   font-weight: 400;
   font-family: 'Lato', "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
   font-size: inherit; }
+  div#map.map.leaflet-container img {
+    max-width: none !important; }
+  div#map.map.leaflet-container .toggle-content img {
+    max-width: 100% !important; }
 
 .pl-popup .leaflet-popup-content-wrapper {
   padding: 0px;
