--- a/assets/sass/utils/overrides/_leaflet-overrides.scss
+++ b/assets/sass/utils/overrides/_leaflet-overrides.scss
@@ -1,6 +1,15 @@
 div#map.map.leaflet-container {
     @include typeBase;
     font-size: inherit;
+
+    img {
+      max-width: none !important;
+    }
+
+    .toggle-content img {
+        max-width: 100% !important;
+    }
+
 }
 
 .pl-popup .leaflet-popup-content-wrapper {
